examples/test/testpolicy15436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15436
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key13: value37
      key6: value42
      key14: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value37
      podSelector:
        matchLabels:
          key30: value28
